[project]
name = "memdb-claude-memory"
version = "0.1.0"
description = "MemDB backend for Anthropic Claude memory tool (memory_20250818)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anatoly Koptev", email = "piteronlinetv@gmail.com" }]
requires-python = ">=3.10"
keywords = ["anthropic", "claude", "memory", "memdb", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "responses>=0.23",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/anatolykoptev/memdb-claude-memory-tool"
Repository = "https://github.com/anatolykoptev/memdb-claude-memory-tool"
"Bug Tracker" = "https://github.com/anatolykoptev/memdb-claude-memory-tool/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memdb_claude_memory"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
